# ChangeLog for app-misc/emelfm2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/emelfm2/ChangeLog,v 1.30 2010/01/07 14:27:31 patrick Exp $

*emelfm2-0.7.1 (07 Jan 2010)

  07 Jan 2010; Patrick Lauer <patrick@gentoo.org> +emelfm2-0.7.1.ebuild:
  Bump for #299219

  04 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> emelfm2-0.6.2.ebuild:
  Restore RESTRICT for test which i've dropped by mistake.

*emelfm2-0.6.2 (21 Jul 2009)

  21 Jul 2009; Samuli Suominen <ssuominen@gentoo.org> +emelfm2-0.6.2.ebuild:
  Version bump wrt #276470, thanks to Tobias Jakobi for reporting.

  20 Apr 2009; Markus Meier <maekke@gentoo.org> emelfm2-0.4.1:
  amd64 stable, bug #259212

  21 Mar 2009; Krzysiek Pawlik <nelchael@gentoo.org> -emelfm2-0.3.5.ebuild,
  -emelfm2-0.4.ebuild:
  Remove old versions.

  18 Mar 2009; Brent Baude <ranger@gentoo.org> emelfm2-0.4.1.ebuild:
  stable ppc, bug 259212

  11 Mar 2009; Brent Baude <ranger@gentoo.org> emelfm2-0.4.1.ebuild:
  stable ppc64, bug 259212

  07 Mar 2009; Raúl Porcel <armin76@gentoo.org> emelfm2-0.4.1.ebuild:
  sparc/x86 stable wrt #259212

*emelfm2-0.5.1 (21 Feb 2009)

  21 Feb 2009; Ben de Groot <yngwin@gentoo.org> metadata.xml,
  +emelfm2-0.5.1.ebuild:
  Version bump, fixes bug 251660

  27 Sep 2008; Ben de Groot <yngwin@gentoo.org> emelfm2-0.4.1.ebuild:
  Add hal useflag and PREFIX as suggested in bug 223543.

*emelfm2-0.4.1 (27 Sep 2008)

  27 Sep 2008; Ben de Groot <yngwin@gentoo.org> +emelfm2-0.4.1.ebuild:
  Version bump. Fixes bug 219188.

*emelfm2-0.4 (20 Apr 2008)

  20 Apr 2008; Samuli Suominen <drac@gentoo.org> +emelfm2-0.4.ebuild:
  Version bump and ~amd64 keyword wrt #217039, thanks to Tobias Jakobi.

  07 Sep 2007; Joseph Jezak <josejx@gentoo.org> emelfm2-0.3.5.ebuild:
  Marked ~ppc for bug #186562.

*emelfm2-0.3.5 (05 Aug 2007)

  05 Aug 2007; Samuli Suominen <drac@gentoo.org> +emelfm2-0.3.5.ebuild:
  Version bump.
