@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/emelfm2
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/emelfm2/ChangeLog,v 1.30 2010/01/07 14:27:31 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/emelfm2/ChangeLog,v 1.31 2010/04/06 21:33:43 ssuominen Exp $
+
+*emelfm2-0.7.2 (06 Apr 2010)
+
+  06 Apr 2010; Samuli Suominen <ssuominen@gentoo.org> +emelfm2-0.7.2.ebuild:
+  Version bump.
 
 *emelfm2-0.7.1 (07 Jan 2010)
 
